# FreeView4D

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  NOTICES.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: architecture.md
examples/: CUSTOM_VIDEO.md
examples/breakdance/: README.md
freeview4d/: __init__.py  extract_dynamic.py  inpaint_frames.py  render_4d.py  sam2_video.py
scripts/: make_gif.py  quickstart.sh  run_pipeline.sh
setup/: install.sh
setup/patches/: hyworld_attention.patch
